<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/registrationPageRelativeLayout"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistrationPage"
    android:background="@color/colorBackground">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="18dp"
        android:layout_marginLeft="18dp"
        android:layout_marginTop="10dp"
        android:text="Registration Page"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/userDisplayNameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="18dp"
        android:layout_marginTop="40dp"
        android:layout_weight="1"
        android:text="" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="59dp"
        android:layout_marginLeft="59dp"
        android:layout_marginTop="104dp"
        android:text="Choose user role:" />


    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/user_roles_radio_group">

        <RadioButton
            android:id="@+id/radio_patient"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="48dp"
            android:layout_marginLeft="48dp"
            android:layout_marginTop="123dp"
            android:onClick="onRadioButtonClicked"
            android:text="Patient"
            tools:layout_editor_absoluteX="34dp"
            tools:layout_editor_absoluteY="156dp" />

        <RadioButton
            android:id="@+id/radio_med_prof"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="48dp"
            android:layout_marginLeft="48dp"
            android:layout_marginTop="123dp"
            android:onClick="onRadioButtonClicked"
            android:text="Medical Professional"
            tools:layout_editor_absoluteX="33dp"
            tools:layout_editor_absoluteY="156dp" />

    </RadioGroup>

    <Button
        android:id="@+id/submitRegistrationInfo"
        android:layout_width="260dp"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="485dp"
        android:layout_centerHorizontal="true"
        android:text="Submit"
        tools:layout_editor_absoluteX="71dp"
        tools:layout_editor_absoluteY="413dp"
        android:textColor="@color/colorText"
        android:background="@color/colorButton"/>


</RelativeLayout>