...
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="42dp"
        android:layout_marginBottom="602dp"
        android:text="Retrieve Patient Data"
        app:layout_constraintBottom_toTopOf="@+id/signOutButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:visibility="gone" />

    <Button
        android:id="@+id/signOutButton"
...
        android:layout_alignParentRight="true"
        android:layout_centerHorizontal="false"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="9dp"
        android:layout_marginRight="9dp"
        android:background="@android:color/transparent"
        android:text="Sign Out"
        android:textSize="14dp"
        android:textColor="@color/colorText" />


    <Button
        android:id="@+id/addToCalendarButton"
...
