...
        android:text="Add New Patient"
        android:textColor="@color/colorText"
        tools:layout_editor_absoluteX="71dp"
        tools:layout_editor_absoluteY="413dp" />

    <Button
        android:id="@+id/retrievePatientInfo"
        android:layout_width="220dp"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="42dp"
        android:layout_marginLeft="42dp"
        android:layout_marginBottom="556dp"
        android:background="@color/colorButton"
        android:text="Retrieve Patient Data"
        android:textColor="@color/colorText"
        tools:layout_editor_absoluteX="71dp"
        tools:layout_editor_absoluteY="413dp" />

    <Button
        android:id="@+id/savePatientData"
...
